tests/local_ptr_loop_uninit_bad.stderr
tests/local_ptr_loop_uninit_bad.hop:7:10: error: HOP2097: pointer/reference variable 'x' is not initialized
