tests/local_ptr_loop_uninit_bad.hop
fn f(cond bool, y *int) int {
	var x *int
	for cond {
		x = y
		break
	}
	return *x
}
